Fix issues with layout on smaller devices and add includes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,17 +6,12 @@ body {
     background: url('/media/closet-blurry.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: white;
     font-family: 'Roboto';
     opacity: 0.7;
 }
 
-.img {
-    filter: grayscale(100%);
-}
-
-
-
+/* From Code Institute */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -42,6 +37,7 @@ body {
 .button-fusia {
     background: #FF00FF;
     color: white;
+    font-weight: 900;
 }
 
 .buy-button:hover,
@@ -61,6 +57,11 @@ body {
 .border-fusia {
     border: 1px solid #FF00FF;
 }
+
+.ajlt {
+    font-weight: 900;
+}
+
 
 /* ............................................... Media Queries */
 
